# GH20_Design

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 00_run_setup.ipynb  00_setup.ipynb  99_playground.ipynb  run_all.ipynb
src/gh20_design/: __init__.py  acquire.py  clustering.py  consensus.py  database.py  explorer.py  paths.py  ssn.py  utils.py
