[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh20-pipeline"
version = "0.1.0"
description = "GH20 pipeline: CAZy → curated FASTA → SSN → clustering → MD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "biopython",
  "requests",
  "tqdm"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
